Debug this shit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
     <%= render "admin/menu" %>
   <% end %>
 
+
+  <%= debug url_for(Book.first) %>
+
   <div id="container">
 
     <div id= "header">
