Fixing social links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,8 +76,8 @@
       <div class="left section" id="interesting-links">
         <h3>Enlaces de interés</h3>
         <p><%= link_to "Universidad EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
-        <p><%= link_to "Centro Cultural Biblioteca LEV EAFIT", "http://www.eafit.edu.co", :target => "_blank"%></p>
-        <p><%= link_to "Red de Bibliotecas", "http://www.eafit.edu.co", :target => "_blank"%></p>
+        <p><%= link_to "Centro Cultural Biblioteca LEV EAFIT", "http://www.eafit.edu.co/biblioteca/Paginas/inicio.aspx", :target => "_blank"%></p>
+        <p><%= link_to "Red de Bibliotecas", "http://www.reddebibliotecas.org.co/sites/Bibliotecas/Paginas/Default.aspx", :target => "_blank"%></p>
       </div>
 
       <div class="left section" id="footer-logos">
@@ -92,9 +92,9 @@
       <div class="left section" id="get-social">
         <h3>Encuéntranos en</h3>
         <div class="footer_icons">
-          <%= link_to image_tag("layout/facebook.png"), "http://www.facebook.com", :target => "_blank" %>
-          <%= link_to image_tag("layout/twitter.png"), "http://www.twitter.com", :target => "_blank"%>
-          <%= link_to image_tag("layout/wordpress.png"), "http://www.wordpress.com", :target => "_blank"%>
+          <%= link_to image_tag("layout/facebook.png"), "https://www.facebook.com/biblioeafit", :target => "_blank" %>
+          <%= link_to image_tag("layout/twitter.png"), "http://twitter.com/#!/biblioeafit", :target => "_blank"%>
+          <%= link_to image_tag("layout/wordpress.png"), "http://blogs.eafit.edu.co/biblioteca/", :target => "_blank"%>
           <%= link_to image_tag("layout/youtube.png"), "http://www.youtube.com/user/medialabeafit", :target => "_blank"%>
           <%#= link_to image_tag("layout/rss.png"), "#" %>
 
